# RelWave

./: README.md  _config.yml  index.html  index.md  package.json  pnpm-lock.yaml  readme.md
.github/workflows/: test.yml
bridge/: docker-compose.test.yml  jest.env.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
bridge/__tests__/: databaseService.test.ts  dbStore.test.ts
bridge/__tests__/connectors/: mariadb.test.ts  mysql.cache.test.ts  mysql.test.ts  postgres.cache.test.ts  postgres.test.ts
bridge/scripts/: seed-mariadb.sql  seed-mysql.sql  seed-test-db.sql
bridge/src/: index.ts  jsonRpc.ts  jsonRpcHandler.ts
bridge/src/connectors/: mariadb.ts  mysql.ts  postgres.ts
bridge/src/handlers/: databaseHandlers.ts  migrationHandlers.ts  queryHandlers.ts  statsHandlers.ts
bridge/test/: cancel_test_client.js  db_test_client.js  stream_test_client.js
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: devtools.rs  main.rs
src-tauri/src/bridge/: commands.rs  mod.rs  process.rs
src/components/: ChartVisualization.tsx  DashboardContent.tsx  DataTable.tsx  DatabaseCard.tsx  Loader.tsx  QueryRunner.tsx  StatsOverview.tsx  header.tsx
src/hooks/: useDatabaseDetails.ts  useDbQueries.ts  useDeveloperMode.ts  useProjectQueries.ts
src/lib/: bytesToMB.ts  schemaTransformer.ts
src/pages/: DatabaseDetails.tsx  ERDiagram.tsx  Index.tsx  NotFound.tsx  Projects.tsx  QueryBuilder.tsx  SQLWorkspace.tsx  SchemaExplorer.tsx  Settings.tsx
src/services/: bridgeApi.ts
src/types/: database.ts
(+91 files in other folders)
